--- a/pom.xml
+++ b/pom.xml
@@ -19,25 +19,22 @@
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-sql_2.13</artifactId>
-            <version>3.3.2</version>
-            <!--            <scope>provided</scope>-->
+            <artifactId>spark-sql_2.12</artifactId>
+            <version>3.4.0</version>
         </dependency>
-
 
         <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-core -->
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.13</artifactId>
-            <version>3.3.2</version>
-            <!--            <scope>provided</scope>-->
+            <artifactId>spark-core_2.12</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-yarn_2.13</artifactId>
-            <version>3.3.2</version>
+            <artifactId>spark-yarn_2.12</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
         <dependency>
@@ -114,17 +111,63 @@
 
 
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.7</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming_2.13</artifactId>
-            <version>3.2.0</version>
+            <artifactId>spark-streaming_2.12</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-streaming-kafka-0-10_2.13</artifactId>
-            <version>3.2.0</version>
+            <artifactId>spark-streaming-kafka-0-10_2.12</artifactId>
+            <version>3.4.0</version>
         </dependency>
 
+
+        <!-- flink相关依赖-->
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-java</artifactId>
+            <version>1.11.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-java_2.12</artifactId>
+            <version>1.11.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-scala_2.12</artifactId>
+            <version>1.11.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-streaming-scala_2.12</artifactId>
+            <version>1.11.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+        <dependency>
+            <groupId>org.apache.flink</groupId>
+            <artifactId>flink-clients_2.12</artifactId>
+            <version>1.11.1</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
 
     </dependencies>
 
@@ -194,8 +237,8 @@
                 <artifactId>scala-maven-plugin</artifactId>
                 <version>3.1.6</version>
                 <configuration>
-                    <scalaCompatVersion>2.13</scalaCompatVersion>
-                    <scalaVersion>2.13.10</scalaVersion>
+                    <scalaCompatVersion>2.12</scalaCompatVersion>
+                    <scalaVersion>2.12.16</scalaVersion>
                 </configuration>
                 <executions>
                     <execution>
