--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-connector-jdbc</artifactId>
-            <version>1.17-SNAPSHOT</version>
+            <version>3.1.0-1.17</version>
         </dependency>
 
         <dependency>
